updated translation for introduction

--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -7,7 +7,7 @@
   "contactNav": "Kontakt",
   "backToTopButtonText": "Tilbage til toppen",
 
-  "introduction": "Mit navn er Oliver Eierstrand. Jeg er 27 år og bor i hovedstadsområdet. Jeg er uddannet Datamatiker på Erhvervsakademi Zealand i Roskilde, og jeg har en stor interesse for Frontend- og Webudvikling. Du kan også finde mig på GitHub og LinkedIn, og mit CV kan ses her.",
+  "introduction": "Mit navn er Oliver Eierstrand. Jeg er 27 år og bor i hovedstadsområdet. Jeg er uddannet Datamatiker på Erhvervsakademi Zealand i Roskilde, og jeg har en stor interesse for Frontend- og Webudvikling.",
   "findMeOn": "Jeg er desuden at finde på:",
   "and": "og",
   "resumeFind": "og mit CV kan ses",
