--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
   "contactNav": "Contact",
   "backToTopButtonText": "Back to top",
 
-  "introduction": "My name is Oliver Eierstrand. I am 27 years old and live in the capital area. I am a graduate in Computer Science at Business Academy Zealand in Roskilde, and I have a great interest in Frontend and Web Development. You can also find me on GitHub and LinkedIn, and my resume can be viewed here.",
+  "introduction": "My name is Oliver Eierstrand. I am 27 years old and live in the capital area. I am a graduate in Computer Science at Business Academy Zealand in Roskilde, and I have a great interest in Frontend and Web Development.",
   "findMeOn": "I can also be found on:",
   "and": "and",
   "resumeFind": "and my resume can be seen",
